<resources>
    <string name="app_name">SMD_A2</string>
    <string name="add">Add</string>
    <string name="location">Location: </string>
    <string name="subitem">Subitem</string>
    <string name="item1">Item1</string>
    <string name="profilpic">profilpic</string>
    <string name="enter_phone_number">Enter Phone Number: </string>
    <string name="enter_description">Enter description: </string>
    <string name="enter_location">Enter location</string>
    <string name="enter_name">Enter name</string>
    <string name="submit">Submit</string>
    <string name="add_details_of_restaurant">Add Details Of Restaurant</string>
    <string name="enter_category">Enter Category</string>
    <string name="restaurant_name">Restaurant Name:</string>
    <string name="name">name</string>
    <string name="category">Category: </string>
    <string name="phone_no">Phone No:</string>
    <string name="description">Description: </string>
    <string name="rating">Rating:</string>
    <string name="back">Back</string>
    <string name="rating_1_5">Rating (1-5)</string>
    <string name="filter_by_rating">Filter by \'rating\'</string>
    <string name="search">Search</string>
</resources>