<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/orange">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical"
      android:layout_margin="20dp"
      android:background="@color/white">
      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/add_details_of_restaurant"
          android:textSize="26sp"
          android:textStyle="bold"
          android:gravity="center"
          android:layout_margin="20dp"
          />
      <com.google.android.material.textfield.TextInputLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_margin="5dp"
          >
          <com.google.android.material.textfield.TextInputEditText
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:hint="@string/enter_name"/>

      </com.google.android.material.textfield.TextInputLayout>
      <com.google.android.material.textfield.TextInputLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_margin="5dp"
          >
          <com.google.android.material.textfield.TextInputEditText
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:hint="@string/enter_location"/>

      </com.google.android.material.textfield.TextInputLayout>
      <com.google.android.material.textfield.TextInputLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_margin="5dp"
          >
          <com.google.android.material.textfield.TextInputEditText
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:hint="@string/enter_phone_number"/>

      </com.google.android.material.textfield.TextInputLayout>
      <com.google.android.material.textfield.TextInputLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_margin="5dp"
          >
          <com.google.android.material.textfield.TextInputEditText
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:hint="@string/enter_description"/>

      </com.google.android.material.textfield.TextInputLayout>

      <Button
          android:id="@+id/btnSubmit"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/submit"
          android:layout_gravity="center"
          android:layout_marginTop="15dp"
          android:backgroundTint="@color/orange"/>
  </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>