<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/orange">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white"
        android:layout_margin="25dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints"
            android:orientation="vertical"
            >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:src="@drawable/food_logo"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:contentDescription="logo" />
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="25dp"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:background="@color/orange"
                    android:layout_marginBottom="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/restaurant_name"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:layout_margin="15dp"
                        android:textColor="@color/white"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name"
                        android:id="@+id/tvName"
                        android:textSize="20sp"
                        android:textColor="@color/white"
                        android:layout_marginTop="15dp"
                        />
                </LinearLayout>
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="25dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:background="@color/orange"
                    android:textColor="@color/white"
                    android:layout_marginBottom="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/category"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:textColor="@color/white"
                        android:layout_margin="15dp"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name"
                        android:id="@+id/tvCategory"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:layout_marginTop="15dp"
                        />
                </LinearLayout>

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="25dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:background="@color/orange"
                    android:layout_marginBottom="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/location"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:textColor="@color/white"
                        android:layout_margin="15dp"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name"
                        android:id="@+id/tvLocation"
                        android:textSize="20sp"
                        android:textColor="@color/white"
                        android:layout_marginTop="15dp"
                        />
                </LinearLayout>

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="25dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:background="@color/orange"
                    android:layout_marginBottom="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/phone_no"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:textColor="@color/white"
                        android:layout_margin="15dp"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name"
                        android:id="@+id/tvPhone"
                        android:textSize="20sp"
                        android:textColor="@color/white"
                        android:layout_marginTop="15dp"
                        />
                </LinearLayout>

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="25dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:background="@color/orange"
                    android:layout_marginBottom="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/description"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:textColor="@color/white"
                        android:layout_margin="15dp"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name"
                        android:id="@+id/tvDescription"
                        android:textSize="20sp"
                        android:textColor="@color/white"
                        android:layout_marginTop="15dp"
                        />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="25dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:background="@color/orange"
                    android:layout_marginBottom="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rating"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:textColor="@color/white"
                        android:layout_margin="15dp"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name"
                        android:id="@+id/tvRating"
                        android:textSize="20sp"
                        android:textColor="@color/white"
                        android:layout_marginTop="15dp"
                        />
                </LinearLayout>


            </androidx.cardview.widget.CardView>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back"
                android:id="@+id/btnBack"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/orange"/>


        </LinearLayout>

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>